<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.justtherest.agefinder.MainActivity">

    <TextView
        android:id="@+id/yourAgeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/your_age_is"
        android:textSize="36sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/yearOldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/yourAgeText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/_0_years_old"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/bornText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/yearOldText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:text="@string/enter_the_date_you_were_born"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/mText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mm"
        android:textSize="18sp"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/yourAgeText" />

    <TextView
        android:id="@+id/dText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/mText"
        android:layout_centerHorizontal="true"
        android:text="@string/dd"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/yText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yyyy"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/dText"
        android:layout_alignBottom="@+id/dText"
        android:layout_toRightOf="@+id/yourAgeText"
        android:layout_toEndOf="@+id/yourAgeText"
        tools:ignore="RelativeOverlap" />

    <EditText
        android:id="@+id/mNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:inputType="number"
        android:layout_below="@+id/mText"
        android:layout_alignRight="@+id/mText"
        android:layout_alignEnd="@+id/mText"
        android:layout_alignLeft="@+id/bornText"
        android:layout_alignStart="@+id/bornText"
        android:imeOptions="actionDone"/>

    <EditText
        android:id="@+id/dNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/mNum"
        android:layout_alignLeft="@+id/yearOldText"
        android:layout_alignStart="@+id/yearOldText"
        android:ems="10"
        android:inputType="number"
        android:layout_alignRight="@+id/dText"
        android:layout_alignEnd="@+id/dText"
        android:imeOptions="actionDone"/>

    <EditText
        android:id="@+id/yNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/bornText"
        android:layout_alignRight="@+id/bornText"
        android:layout_alignTop="@+id/dNum"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp"
        android:layout_toRightOf="@+id/dNum"
        android:ems="10"
        android:inputType="number"
        android:imeOptions="actionDone"/>

    <Button
        android:id="@+id/calButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dNum"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:text="@string/calculate" />

</RelativeLayout>
